--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,20 @@
 {
-  "database_file_name": "./filmstore.sqlite",
-  "image_thumbnail_folder": "",
-  "image_original_folder": "",
-  "allow_raw_upload": true,
-  "allow_raw_post_processing": false,
-  "disable_thumbnail_compression": false,
-  "use_user_auth": false,
-  "allow_user_creation": false
+  "network_config": {
+    "port": 4200
+  },
+  "images": {
+    "image_thumbnail_folder": "pictures/",
+    "image_original_folder": null,
+    "allow_raw_upload": true,
+    "allow_raw_post_processing": false,
+    "disable_thumbnail_compression": false,
+    "include_exif_in_image_metadata": true
+  },
+  "data": {
+    "database_file_name": "./filmstore.sqlite"
+  },
+  "authentication": {
+    "use_user_auth": false,
+    "allow_user_creation": false
+  },
 }
